--- a/Deploy/style.css
+++ b/Deploy/style.css
@@ -1,3 +1,9 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif ;
+}
+
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -7,13 +13,55 @@ ul {
     background-color: #f3f3f3;
     }
     
-    li {
-        display: inline;
-        float: left; 
-    }
+li {
+    display: inline;
+    float: left; 
+    clear: both;
+}
     
-    li:last-child {
-        float: right;
-    }
+li:last-child {
+    float: right;
+    clear: both;
+}
+
+h3 {
+    text-align: center;
+}
+.infoBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background: thistle;
+    padding: 12px 16px;
+    font-size: 20px;
+    overflow: hidden;
+    margin: 30px;
     
+}
+
+
+.start{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 45%;
+  
+    transform: translate(-50, -50);
+    background-color: lightskyblue;
+    padding: 20px 15px;
+    font-size: medium;
+    font-weight: bold;
+    border-radius: 5px;
+    border: slategray;
+    
+}
+    
+.btn {
+    display: block;
+    width: 30px;
+    margin: 10px;
+    padding: 0;
+}
     
