--- a/Deploy/style.css
+++ b/Deploy/style.css
@@ -1,8 +1,9 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif ;
+    font-family: 'Times New Roman', Times, serif;
 }
-
 
 ul {
     list-style-type: none;
@@ -11,14 +12,14 @@ ul {
     overflow: hidden;
     border: 1px solid #e7e7e7;
     background-color: #f3f3f3;
-    }
-    
+}
+
 li {
     display: inline;
-    float: left; 
+    float: left;
     clear: both;
 }
-    
+
 li:last-child {
     float: right;
     clear: both;
@@ -27,6 +28,7 @@ li:last-child {
 h3 {
     text-align: center;
 }
+
 .infoBox {
     display: flex;
     justify-content: center;
@@ -37,17 +39,14 @@ h3 {
     font-size: 20px;
     overflow: hidden;
     margin: 30px;
-    
 }
 
-
-.start{
+.start {
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     left: 45%;
-  
     transform: translate(-50, -50);
     background-color: lightskyblue;
     padding: 20px 15px;
@@ -55,16 +54,15 @@ h3 {
     font-weight: bold;
     border-radius: 5px;
     border: slategray;
-    
 }
-    
+
 .btn {
     display: block;
     width: 30px;
     margin: 10px;
     padding: 0;
 }
-    
+
 .hide {
     display: none;
 }
