--- a/Deploy/style.css
+++ b/Deploy/style.css
@@ -1,6 +1,4 @@
-*,
-*::before,
-*::after {
+*, *::before, *::after {
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -29,19 +27,38 @@ h3 {
     text-align: center;
 }
 
+p {
+    text-align: left;
+}
+
+
 .infoBox {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300px;
+    height: 350px;
     background: thistle;
     padding: 12px 16px;
     font-size: 20px;
     overflow: hidden;
-    margin: 30px;
+    margin: 15px;
 }
 
-.start {
+#questionContainer {
+ 
+    height: 250px;
+    padding: 5px 5px;
+    font-size: 20px;
+    overflow: hidden;
+    margin-top: 100px;
+    margin-left: 200px;
+    margin-right: 200px;
+    background-color: mediumaquamarine;
+    border-radius: 5px;
+}
+
+#startBtn {
+   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,6 +71,14 @@ h3 {
     font-weight: bold;
     border-radius: 5px;
     border: slategray;
+    margin: 10px;
+}
+
+.btn-grid {
+    grid-template-columns: repeat(2,auto);
+    gap: 10px;
+    margin: 20px 0;
+   
 }
 
 .btn {
@@ -61,7 +86,9 @@ h3 {
     width: 30px;
     margin: 10px;
     padding: 0;
+  
 }
+
 
 .hide {
     display: none;
