--- a/Deploy/style.css
+++ b/Deploy/style.css
@@ -56,7 +56,7 @@ p {
 
 .btn-grid {
     gap: 10px;
-    margin: 20px 0;
+    margin: 15px 0;
     width: fit-content;
 }
 
@@ -100,3 +100,12 @@ p {
     right:0px;
     width:100%;
    }
+
+.finalScore{
+    justify-content: left;
+    align-items: left;
+    height: 277px;
+    padding: 12px 16px;
+    font-size: 20px;
+    margin: 15px;
+}
